Sidebar: Fixs scrollbar position, biome 2.2.0

--- a/assets/css/v2/style.css
+++ b/assets/css/v2/style.css
@@ -617,7 +617,7 @@ ol li:last-child {
       overflow-y: auto;
       min-height: 0;
       /* allows space for scrollbar */
-      width: calc(var(--sidebar-width) - 1rem);
+      width: calc(var(--sidebar-width));
       scrollbar-gutter: stable;
     }
   }
